[package]
name = "actuator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.11.4"
toml = "0.5.8"
directories = "4.0.1"
signal-hook = "0.3.13"
serde = { version = "1.0", features = ["derive"] }